Vendorupdate auf Version 2.2

--- a/assets/redactor.css
+++ b/assets/redactor.css
@@ -957,6 +957,13 @@
     margin: 0;
     padding: 0;
     margin-bottom: 12px; }
+    .redactor-styles h1:empty,
+    .redactor-styles h2:empty,
+    .redactor-styles h3:empty,
+    .redactor-styles h4:empty,
+    .redactor-styles h5:empty,
+    .redactor-styles h6:empty {
+      min-height: 24px; }
   .redactor-styles h1 {
     font-size: 40px;
     line-height: 44px; }
@@ -987,6 +994,9 @@
   .redactor-styles address {
     padding: 0;
     margin: 0; }
+  .redactor-styles p:empty,
+  .redactor-styles blockquote:empty {
+    min-height: 24px; }
   .redactor-styles p + h2,
   .redactor-styles p + h3,
   .redactor-styles p + h4,
@@ -1105,6 +1115,10 @@
     top: -.4rem; }
   .redactor-styles sub {
     bottom: -.2rem; }
+  .redactor-styles strong:empty, .redactor-styles b:empty, .redactor-styles em:empty, .redactor-styles i:empty, .redactor-styles sup:empty, .redactor-styles sub:empty, .redactor-styles u:empty, .redactor-styles ins:empty {
+    display: inline-block;
+    min-width: 1em;
+    min-height: 1rem; }
   .redactor-styles figcaption {
     margin: 4px 0;
     font-size: 12px;
